beta/stylesheet.css
/* GLOBAL */

body {
    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: column;

    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}


h1, h2 {
    margin: 0;
}


a, a:visited {
    color: #2b9cce;
    text-decoration: none;
    font-weight: 600;
}

a:hover, a:focus {
    text-decoration: none;
    color: #FF8700;
    cursor: pointer;
}

/* dark mode */

.dark-mode {
    background: #1c2b46;
    color: #bdd2e0;
    transition: background 1s, color 1s;
}

.dark-mode .project-tags .project-tag {
    background: #394763;
    color: #a4c5da;
    transition: background 1s, color 1s;
}

.dark-mode .one-project {
    box-shadow: 0px 5px 4px #0b182f;
    transition: box-shadow 1s;
}

.dark-mode .section-title {
    background: #43567d;
    transition: background 1s;
}


/* SECTION DEFINITIONS */

.page-section {
    padding;: 0 10vw;
    display: flex;
}

.section-wrapper {
    display: flex;
    padding: 10px;              /* just a little padding */
    flex-direction: column;
    width: 100%;
    max-width: 800px;
    box-sizing: border-box;
}

.section-title {
    background: #ffa331;
    transform: skew(-20deg);
    padding: 0.5rem 2rem;
    margin-bottom: 2rem;
    width: 25%;
    text-align: center;
}

.section-title h2 {
    transform: skew(20deg);  
    font-family: "Vollkorn", serif;
    font-size: 3.5rem;
    font-weight: 400;
}


/* toggled */

.intro-on-toggle #name-heading {
    font-size: 3rem;
    transition: font-size 0.5s;
}

.intro-on-toggle #name-subheading {
    font-size: 1.5rem;
    transition: font-size 0.5s;
}

.intro-on-toggle .section-wrapper {
    padding-top: 5px;
}


/* INDIVIDUAL SECTIONS */



/* intro page */


#intro-section {
    min-height: 100vh;
    justify-content: center;
    background: #f3f3f3;
    color: #3e3e3e;
}


#intro-section .section-wrapper {
    text-align: center;
    padding: 0;
}


.name-heading-wrapper {
    padding-top: 25vh;
    transition: padding-top 0.5s;
}

#name-heading {
    font-size: 5rem;
    font-family: 'Vollkorn', serif;
    font-weight: 400;
    transition: font-size 0.5s
}

#name-subheading {
    font-size: 2rem;
    font-weight: 300;
    transition: font-size 0.5s
}

.about-me {
    line-height: 1.4;
    text-align: justify;
    width: 80%;
    margin: auto;
    padding-top: 5vh;
    opacity: 0;
    height: 0;
    font-size: 0.5rem;
    transition: font-size 0.5s, height 0.5s, opacity 0.5s;
}



/* projects page */

#projects-section {
    flex-direction: column;
    min-height: 100vh;
    align-items: center;
    justify-content: center;
}



/* single project */

.one-project {
    display: flex;
    flex-direction: row-reverse;
    border: 1px solid #cecece;
    border-radius: 5px;
    box-shadow: 0px 5px 4px #efefef;
    min-width: 300px;
    margin: 1rem 0;
}

.one-project a, .one-project a:visited {
    color: #2b9cce;
    text-decoration: none;
    padding: 5px 12px;
    border: 1px solid #2b9cce;
    border-radius: 5px;
    margin-right: 0.5rem;
}

.one-project a:hover {
    color: white;
    background: #2b9cce;
}

.project-body {
    width: 70%;
    display: flex;
    flex-direction: column;
    padding: 1.3rem;    
}

.project-body div {
    margin: 0.5rem 0px;
}

.project-body .project-name {
    font-size: 2rem;
    margin-bottom: 0.5rem;
}

.project-body .project-tags {
    flex-wrap: wrap;
    display: flex;
}

.project-body .project-tag {
    padding: 3px 10px;
    margin: 0 0.5rem 0.5rem 0;
    font-size: 0.8rem;
    font-weight: 600;
    text-align: center;
    background: #d0cccc;
    border-radius: 5px;
    color: #404040;
}

.project-body .project-description {
    line-height: 1.4;
}

.project-pic {
    width: 30%;
    background: yellow; 
    border-radius: 0 5px 5px 0;
}

.project-links {
    font-weight: 600;
}


/* nav links */

.links {
    display: flex;
    justify-content: space-between;
    padding-bottom: 5rem;             /* This is not great */
    margin-top:auto;
}

.one-link, .one-link a  {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #3e3e3e;
    font-weight: 400;

/*    
    height: 5rem;
    width: 5rem;
    border: 1px solid gray;
    border-radius: 5px;
    padding: 1rem;
    box-shadow: 0 5px 20px rgba(128, 128, 128, 0.5);*/
    
}

.one-link i {
    font-size: 2rem;
}

.one-link:hover {
    color: #2b9cce;
    cursor: pointer;
    text-shadow: 0 0.3rem 10px rgba(15, 61, 84, 0.5);
    transform: translateY(-0.3rem);
    transition: transform 0.1s;
}

.one-link:hover>a {
    color: #2b9cce;
}


.one-link .link-label {
    padding-top: 1rem;
}


.selected-link {
    color: #2b9cce;
}

.selected-link:hover {
/*    color: #f3f3f3;
    background: #696868;
    border: 1px solid gray;*/
}


/* turned on*/

.about-switched-on .name-heading-wrapper #name-heading {
    font-size: 3.5rem;
    transition: font-size 0.5s;
}

.about-switched-on .name-heading-wrapper #name-subheading {
    font-size: 1.5rem;
    transition: font-size 0.5s;
}

.about-switched-on .name-heading-wrapper{
    padding-top: 5vh;
    transition: padding-top 0.5s;
}

.about-switched-on .about-me {
    display: block;
    opacity: 1;
    height: auto;
    font-size: 1rem;
    transition: font-size 0.5s, height 1s, opacity 1s;
}




/* MOBILE STYLING */

@media handheld, screen and (max-width: 700px) {




    /* SECTION DEFINITIONS */



    /* INDIVIDUAL SECTIONS */



    /* intro page */

    #name-heading {
        font-size: 2.2rem;
    }

    #name-subheading {
        font-size: 1.3rem;
    }

    /* projects page */

    /* single project */

    .one-project {
        flex-direction: column;
    }

    .project-pic {
        width: 100%;
        height: 30%;
        border-radius: 5px 5px 0 0;
    }

    .project-body {
        width: 100%;
        box-sizing: border-box;
    }

    .project-body .project-tags {
        flex-wrap: wrap;
        display: flex;
    }

    .project-body .project-description {
        font-size: 0.9em;
    }

    /* nav links */

    .links {
        flex-wrap: wrap;
        justify-content: space-around;

        height: 8rem;
        align-items: center;
        padding: 0;
    }


    .one-link {
        height: 100%;
        display: flex;
        justify-content: center;
        box-sizing: border-box;
        flex-grow: 1;
    }

    .one-link a {
        width: 100%;
        height: 100%;
    }

    .one-link:hover>a, .one-link:active>a {
        color: #3e3e3e;
    }

    .one-link .link-label {
        padding-top: 0.5rem;
        font-size: 0.8rem;
    }

    .one-link i {
        font-size: 1.6rem;
    }

    /* turned on*/

    .about-me {
        padding-top: 0;
        width: 90%;
        font-size: 0.3rem;
    }

    .about-switched-on .name-heading-wrapper #name-heading {
        font-size: 2rem;
    }

    .about-switched-on .name-heading-wrapper #name-subheading {
        font-size: 1.2rem;
    }

    .about-switched-on .name-heading-wrapper{
        padding-top: 5vh;
    }

    .about-switched-on .about-me {
        font-size: 0.8rem;
        transition: font-size 0.5s;
    }

}

